# ferrum

./: .gitmessage  .pre-commit-config.yaml  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: cross-platform-build.yml  docs.yml  rust.yml
ferrum/: all.html  index.html  sidebar-items.js
ferrum/certificates/: index.html  sidebar-items.js
ferrum/certificates/ca/: index.html  sidebar-items.js  struct.CertificateAuthority.html
ferrum/intercept/: index.html
ferrum/intercept/request/: index.html  sidebar-items.js  struct.RequestInterceptor.html
ferrum/intercept/response/: index.html  sidebar-items.js  struct.ResponseInterceptor.html  type.ProxyBody.html
ferrum/proxy/: index.html
ferrum/proxy/server/: fn.full.html  fn.handle_request.html  index.html  sidebar-items.js  struct.ProxyServer.html  type.BoxBody.html
ferrum/ui/: index.html  sidebar-items.js
ferrum/ui/cli/: enum.Commands.html  fn.parse_cli.html  index.html  sidebar-items.js  struct.Cli.html
ferrum/ui/tui/: index.html  sidebar-items.js  struct.Tui.html
ferrum/utils/: index.html  sidebar-items.js
ferrum/utils/error/: enum.FerrumError.html  index.html  sidebar-items.js
ferrum/utils/logger/: fn.init.html  index.html
scripts/: setup-git-hooks.sh
search.desc/ferrum/: ferrum-desc-0-.js
src/: lib.rs  main.rs
src/certificates/: ca.rs
src/ferrum/: lib.rs.html
src/ferrum/certificates/: ca.rs.html  mod.rs.html
src/ferrum/intercept/: mod.rs.html  request.rs.html  response.rs.html
src/ferrum/proxy/: mod.rs.html  server.rs.html
src/ferrum/ui/: cli.rs.html  mod.rs.html  tui.rs.html
src/ferrum/utils/: error.rs.html  logger.rs.html  mod.rs.html
src/intercept/: request.rs  response.rs
src/proxy/: server.rs
src/ui/: cli.rs  tui.rs
src/utils/: error.rs  logger.rs
tests/: mod.rs  parameterized_tests.rs  test_utils.rs
tests/integration/: proxy_integration_tests.rs
tests/unit/: ca_tests.rs  proxy_server_tests.rs  request_interceptor_tests.rs  response_interceptor_tests.rs
trait.impl/clap_builder/derive/: trait.Args.js  (+4 more)
(+11 files in other folders)
