[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"
description = "A web proxy/interceptor tool similar to Burp Suite, built in Rust"
authors = ["Anyesh"]

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }  # Async runtime
hyper = { version = "1.2.0", features = ["full"] }   # HTTP library
hyper-util = { version = "0.1.4", features = ["full"] } # Hyper utilities
http-body-util = "0.1.0"                             # HTTP body utilities
bytes = "1.5.0"                                      # Bytes handling
rustls = "0.22.2"                                    # TLS implementation
hyper-rustls = "0.26.0"                              # Rustls connector for Hyper
clap = { version = "4.5.3", features = ["derive"] }  # Command line argument parsing
serde = { version = "1.0.197", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0.114"                               # JSON handling
tower = "0.4.13"                                     # Middleware composition
http = "1.0.0"                                       # HTTP types
anyhow = "1.0.80"                                    # Error handling
log = "0.4.21"                                       # Logging
env_logger = "0.11.3"                                # Logging implementation
chrono = "0.4.35"                                    # Date and time handling
dirs = "5.0.1"                                       # Directory paths

[dev-dependencies]
tempfile = "3.10.1"                                  # Temporary file handling for tests
assert_fs = "1.1.1"                                  # Filesystem assertions for tests
mockall = "0.12.1"                                   # Mocking framework
httpmock = "0.7.0"                                   # HTTP mocking server
rstest = "0.18.2"                                    # Test fixtures and parameterized tests
rand = "0.8.5"                                       # Random number generation
tokio-test = "0.4.3"                                 # Testing utilities for tokio
